Heading anchor fix; Codeblock no-wrapping; dl-boxes

--- a/client/scss/components/_code_block.scss
+++ b/client/scss/components/_code_block.scss
@@ -20,7 +20,7 @@ pre {
   max-width: 100%;
   overflow: auto;
   position: relative;
-  white-space: pre-wrap;
+  white-space: pre;
 
   .copy-area {
     position: absolute;
