--- a/client/scss/components/_typography.scss
+++ b/client/scss/components/_typography.scss
@@ -1,3 +1,29 @@
+.heading-anchor {
+  h1 & {
+    top: 86px;
+  }
+
+  h2 & {
+    top: 81px;
+  }
+
+  h3 & {
+    top: 77px;
+  }
+
+  h4 & {
+    top: 72px;
+  }
+
+  h5 & {
+    top: 70px;
+  }
+
+  h6 & {
+    top: 69px;
+  }
+}
+
 h1,
 h2,
 h3,
@@ -8,19 +34,29 @@ h6 {
   margin-top: 1.5rem;
   position: relative;
 
+  &::before {
+    content: '';
+    display: block;
+    position: relative;
+    width: 0;
+    height: 70px;
+    margin-top: -70px;
+  }
+
   .heading-anchor {
     color: transparent;
     font-size: 1.3rem;
     left: -1.7rem;
-    line-height: 1em;
     padding-right: 2rem;
-    padding-top: 0.4em;
     position: absolute;
-    top: 0.3em;
   }
 
   &:hover .heading-anchor {
     color: $c-grey-2;
+  }
+
+  .callout &:hover .heading-anchor {
+    color: transparent;
   }
 }
 
@@ -33,16 +69,6 @@ h6,
 b,
 strong {
   font-weight: $global-weight-bold;
-}
-
-.heading-anchor {
-  h2 & {
-    padding-top: 0.7em;
-  }
-
-  h4 & {
-    padding-top: 0.2em;
-  }
 }
 
 a {
